--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+xx<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -360,19 +360,19 @@ body{
         </div>
   <!-- Modelo Base: Substitua apenas o conteúdo interno (título, iframe e descrição) para os outros projetos -->
 
-<!-- TODOS OS 7 MODAIS COM TAMANHO FIXO: 400x230 -->
+<!-- TODOS OS 7 MODAIS - 500x330 | IFRAME 400x230 -->
 
-<!-- Projeto 1 -->
+<!-- Modal Projeto 1 -->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 1</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/6Z79fOVQrfI" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/6Z79fOVQrfI" allowfullscreen></iframe>
         </div>
         <small><strong>Projetos com HTML, CSS e JS</strong></small>
       </div>
@@ -380,17 +380,17 @@ body{
   </div>
 </div>
 
-<!-- Projeto 2 -->
+<!-- Modal Projeto 2 -->
 <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
         <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
       </div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 2</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/Dklrf10nk7o" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/Dklrf10nk7o" allowfullscreen></iframe>
         </div>
         <small><strong>E-Commerce com React.js + Node.js</strong></small>
       </div>
@@ -398,15 +398,15 @@ body{
   </div>
 </div>
 
-<!-- Projeto 3 -->
+<!-- Modal Projeto 3 -->
 <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 3</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/rdXlVZABsCs" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/rdXlVZABsCs" allowfullscreen></iframe>
         </div>
         <small><strong>JavaFX - Aplicação Desktop</strong></small>
       </div>
@@ -414,15 +414,15 @@ body{
   </div>
 </div>
 
-<!-- Projeto 4 -->
+<!-- Modal Projeto 4 -->
 <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 4</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/kaQ21zzBSRQ" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/kaQ21zzBSRQ" allowfullscreen></iframe>
         </div>
         <small><strong>Web App com Spring Boot</strong></small>
       </div>
@@ -430,15 +430,15 @@ body{
   </div>
 </div>
 
-<!-- Projeto 5 -->
+<!-- Modal Projeto 5 -->
 <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 5</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/Wi3Kys17v70" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/Wi3Kys17v70" allowfullscreen></iframe>
         </div>
         <small><strong>API Spring Boot - Backend</strong></small>
       </div>
@@ -446,15 +446,15 @@ body{
   </div>
 </div>
 
-<!-- Projeto 6 -->
+<!-- Modal Projeto 6 -->
 <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 6</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/PeWQL_bShmA" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/PeWQL_bShmA" allowfullscreen></iframe>
         </div>
         <small><strong>Launcher Gamer em C#</strong></small>
       </div>
@@ -462,15 +462,15 @@ body{
   </div>
 </div>
 
-<!-- Projeto 7 -->
+<!-- Modal Projeto 7 -->
 <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" style="max-width: 400px;">
-    <div class="modal-content rounded-4 shadow" style="width: 400px; height: 230px; overflow-y: auto;">
+  <div class="modal-dialog" style="max-width: 500px;">
+    <div class="modal-content rounded-4 shadow" style="width: 500px; height: 330px; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-3 pt-0">
+      <div class="modal-body text-center px-3 pt-0 pb-3">
         <h6 class="text-uppercase text-secondary mb-2">Projeto 7</h6>
-        <div class="ratio ratio-16x9 mb-2">
-          <iframe src="https://www.youtube.com/embed/ttEas1pFiK4" allowfullscreen></iframe>
+        <div class="d-flex justify-content-center mb-2">
+          <iframe width="400" height="230" src="https://www.youtube.com/embed/ttEas1pFiK4" allowfullscreen></iframe>
         </div>
         <small><strong>Primeira App JavaFX</strong></small>
       </div>
