--- a/index.html
+++ b/index.html
@@ -360,18 +360,18 @@ body{
         </div>
   <!-- Modelo Base: Substitua apenas o conteúdo interno (título, iframe e descrição) para os outros projetos -->
 
-<!-- TODOS OS 7 MODAIS - MODAL 630x460 | IFRAME 400x230 -->
+<!-- TODOS OS 7 MODAIS - 630x360 | IFRAME 400x230 -->
 
 <!-- Modal Projeto 1 -->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 1</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 1</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/6Z79fOVQrfI" allowfullscreen></iframe>
         </div>
         <small><strong>Projetos com HTML, CSS e JS</strong></small>
@@ -383,13 +383,13 @@ body{
 <!-- Modal Projeto 2 -->
 <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 2</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 2</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/Dklrf10nk7o" allowfullscreen></iframe>
         </div>
         <small><strong>E-Commerce com React.js + Node.js</strong></small>
@@ -401,13 +401,13 @@ body{
 <!-- Modal Projeto 3 -->
 <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 3</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 3</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/rdXlVZABsCs" allowfullscreen></iframe>
         </div>
         <small><strong>JavaFX - Aplicação Desktop</strong></small>
@@ -419,13 +419,13 @@ body{
 <!-- Modal Projeto 4 -->
 <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 4</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 4</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/kaQ21zzBSRQ" allowfullscreen></iframe>
         </div>
         <small><strong>Web App com Spring Boot</strong></small>
@@ -437,13 +437,13 @@ body{
 <!-- Modal Projeto 5 -->
 <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 5</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 5</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/Wi3Kys17v70" allowfullscreen></iframe>
         </div>
         <small><strong>API Spring Boot - Backend</strong></small>
@@ -455,13 +455,13 @@ body{
 <!-- Modal Projeto 6 -->
 <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 6</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 6</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/PeWQL_bShmA" allowfullscreen></iframe>
         </div>
         <small><strong>Launcher Gamer em C#</strong></small>
@@ -473,13 +473,13 @@ body{
 <!-- Modal Projeto 7 -->
 <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog" style="max-width: 630px;">
-    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 460px; overflow-y: auto;">
+    <div class="modal-content rounded-4 shadow" style="width: 630px; height: 360px; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal"></button>
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h5 class="text-uppercase text-secondary mb-3">Projeto 7</h5>
-        <div class="d-flex justify-content-center mb-3">
+        <h6 class="text-uppercase text-secondary mb-2">Projeto 7</h6>
+        <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/ttEas1pFiK4" allowfullscreen></iframe>
         </div>
         <small><strong>Primeira App JavaFX</strong></small>
@@ -487,6 +487,7 @@ body{
     </div>
   </div>
 </div>
+
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
