--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ body{
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/Dklrf10nk7o" allowfullscreen></iframe>
         </div>
-        <small><strong>E-Commerce com React.js + Node.js</strong></small>
+        <small><strong>E-Commerce com React.js + Node.js (incompleta)</strong></small>
       </div>
     </div>
   </div>
@@ -464,7 +464,7 @@ body{
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/PeWQL_bShmA" allowfullscreen></iframe>
         </div>
-        <small><strong>Launcher Gamer em C#</strong></small>
+        <small><strong>Minha primeira aplicação em JavaFX</strong></small>
       </div>
     </div>
   </div>
@@ -482,7 +482,7 @@ body{
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/ttEas1pFiK4" allowfullscreen></iframe>
         </div>
-        <small><strong>Primeira App JavaFX</strong></small>
+        <small><strong>Launcher Gamer em C#</strong></small>
       </div>
     </div>
   </div>
