--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 1</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 1</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/6Z79fOVQrfI" allowfullscreen></iframe>
         </div>
@@ -388,7 +388,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 2</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 2</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/Dklrf10nk7o" allowfullscreen></iframe>
         </div>
@@ -406,7 +406,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 3</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 3</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/rdXlVZABsCs" allowfullscreen></iframe>
         </div>
@@ -424,7 +424,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 4</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 4</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/kaQ21zzBSRQ" allowfullscreen></iframe>
         </div>
@@ -442,7 +442,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 5</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 5</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/Wi3Kys17v70" allowfullscreen></iframe>
         </div>
@@ -460,7 +460,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 6</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 6</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/PeWQL_bShmA" allowfullscreen></iframe>
         </div>
@@ -478,7 +478,7 @@ body{
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
       <div class="modal-body text-center px-3 pt-0 pb-3">
-        <h6 class="text-uppercase text-secondary mb-2">Projeto 7</h6>
+        <h6 class="text-uppercase text-secondary mb-2"><strong>Projeto 7</strong></h6>
         <div class="d-flex justify-content-center mb-2">
           <iframe width="400" height="230" src="https://www.youtube.com/embed/ttEas1pFiK4" allowfullscreen></iframe>
         </div>
